layout bug fix

--- a/image_map/resources/styles.css
+++ b/image_map/resources/styles.css
@@ -12,6 +12,7 @@
   border: 1px solid lightgrey;
   border-bottom: none;
   position: relative;
+  overflow: hidden;
 }
 
 .area {
